front+back basicos

--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,47 @@
     <title>Productos</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo-container">
+            <div class="logo"></div>
+            <h3>Kiosquitodo</h3>
+        </div>
+        <nav class="nav">
+            <ul class="menu">
+                <li class="item">inicio</li>
+                <li class="item">productos</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <form id="formulario" action="#" method="POST">
+            <input type="text" name="nombre" id="nombre" placeholder="Nombre del producto"/>
+            <input type="submit" value="buscar producto"/>
+
+            <div class="resultado">
+                
+            </div>
+        </form>
+    </div>
+
+    <footer class="footer">
+        <hr>
+        <p><strong>Kiosquitodo</strong> - Todos los derechos reservados © 2025</p>
+        <p>
+            Dirección: blabla, Santa Fe, Argentina<br>
+            Teléfono: 342 999-9999<br>
+            Email: kiosquitodo@gmail.com
+        </p>
+        <p>
+            <a href="#">Términos y Condiciones</a> | 
+            <a href="#">Política de Privacidad</a>
+        </p>
+        <p>Síguenos en:
+            <a href="#">Facebook</a> | 
+            <a href="#">Instagram</a> | 
+            <a href="#">WhatsApp</a>
+        </p>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
