--- a/front/buscar.html
+++ b/front/buscar.html
@@ -20,7 +20,14 @@
         </nav>
     </header>
     <div class="container">
-        
+        <form id="formulario" action="#" method="POST">
+            <input type="text" name="nombre" id="nombre" placeholder="Nombre del producto"/>
+            <input type="submit" value="buscar producto"/>
+
+            <div class="resultado">
+                
+            </div>
+        </form>
     </div>
 
     <footer class="footer">
@@ -41,6 +48,6 @@
             <a href="#">WhatsApp</a>
         </p>
     </footer>
-    <script src="/scripts/index.js"></script>
+    <script src="/scripts/buscar.js"></script>
 </body>
 </html>
