--- a/front/eliminar.html
+++ b/front/eliminar.html
@@ -20,7 +20,11 @@
         </nav>
     </header>
     <div class="container">
-        
+        <form id="form-eliminar" action="#" method="DELETE">
+            <h3>Eliminar Producto</h3>
+            <input type="text" name="nombre" id="nombre-eliminar" placeholder="Nombre del producto" />
+            <input type="submit" value="Eliminar producto" />
+        </form>
     </div>
 
     <footer class="footer">
@@ -41,6 +45,6 @@
             <a href="#">WhatsApp</a>
         </p>
     </footer>
-    <script src="/scripts/index.js"></script>
+    <script src="/scripts/eliminar.js"></script>
 </body>
 </html>
